--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,47 @@
+body {
+    font-family : sans-serif;
+}
 
+header {
+    background-color : #2c3e50;
+    color: white;
+}
+
+header h4 {
+    margin-bottom: 0;
+}
+
+.section_1 {
+    background-color: #1abc9c;
+    color: white;
+}
+
+.section_1 h2 {
+    text-align: center;
+    font-size: 30px;
+    margin-bottom: 0;
+}
+
+.star_line  {
+    font-size: 30px;
+    text-align: center;
+}
+
+.bg_darkred {
+    background-color: #ba4b63;
+}
+.bg_lightblue {
+    background-color: #1ea4b6;
+}
+.bg_black {
+    background-color: #140f0f;
+}
+.bg_blue {
+    background-color: #1c83c1;
+}
+.bg_darkblue {
+    background-color: #0e38b5;
+}
+.bg_grey {
+    background-color: #ccb2a3;
+}
