--- a/css/styles.css
+++ b/css/styles.css
@@ -2,31 +2,9 @@ body {
     font-family : sans-serif;
 }
 
-header,
-footer {
-    background-color : #2c3e50;
-    color: white;
-}
-
-header h4 {
-    margin-bottom: 0;
-}
-
-.section_1 {
-    background-color: #1abc9c;
-    color: white;
-}
-
-.section_1 h2 {
-    text-align: center;
-    font-size: 30px;
-    margin-bottom: 0;
-}
-
-.star_line  {
-    font-size: 30px;
-    text-align: center;
-}
+html {
+    font-size: 1.2 rem;
+  }
 
 .bg_darkred {
     background-color: #ba4b63;
@@ -49,6 +27,30 @@ header h4 {
 
 .bg_green {
     background-color: #1abc9c;
+}
+
+header,
+footer {
+    background-color : #2c3e50;
+    color: white;
+}
+
+header h4 {
+    margin-bottom: 0;
+}
+
+.section_1 {
+    background-color: #1abc9c;
+    color: white;
+}
+
+.section_1 h2 {
+    margin-bottom: 0;
+}
+
+.star_line  {
+    font-size: 30px;
+    text-align: center;
 }
 
 .section_2 img {
